--- a/build.gradle
+++ b/build.gradle
@@ -69,7 +69,8 @@ dependencies {
 
 
 
-
+    //左侧菜单
+    implementation "androidx.drawerlayout:drawerlayout:1.1.0-alpha03"
 
 
 
@@ -87,9 +88,6 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.6.2'
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.6.2'
     implementation 'com.squareup.okhttp3:logging-interceptor:4.2.2'
-
-
-
 
 
 
