--- a/build.gradle
+++ b/build.gradle
@@ -56,11 +56,13 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.1.0'
+
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
-
+    //下拉刷新框架
+    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
 
 
     //当一个dex文件装不下的时候自动拆分 -- 编译
@@ -76,7 +78,8 @@ dependencies {
     // Anko Commons 异步线程
     implementation 'org.jetbrains.anko:anko-commons:0.10.1'
 
-
+    //自动换行RecycleView
+    implementation 'com.google.android:flexbox:2.0.1'
 
     //facebook 的网络图片加载库
     implementation 'com.facebook.fresco:fresco:2.3.0'
